Add close button to Auth modal

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <div class="modal-content" style="max-width: 400px;">
       <div class="modal-header">
         <h2 id="auth-title">Sign In</h2>
+        <button id="close-auth-btn" class="icon-btn">&times;</button>
       </div>
       <div class="modal-body">
         <label for="auth-username" class="sr-only">Username</label>
