--- a/index.html
+++ b/index.html
@@ -286,6 +286,20 @@
 
         <hr class="setting-divider">
 
+        <!-- Legal -->
+        <h3 class="settings-section-title">Legal</h3>
+        <div class="setting-actions">
+          <a href="/privacy.html" target="_blank" class="btn-secondary"
+            style="text-decoration:none; display:flex; justify-content: center; align-items: center; gap: 8px; font-size:0.9rem;">
+            Privacy Policy
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+              <polyline points="15 3 21 3 21 9"></polyline>
+              <line x1="10" y1="14" x2="21" y2="3"></line>
+            </svg>
+          </a>
+        </div>
+
         <!-- Data -->
 
 
