Update privacy policy with encryption details

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -71,8 +71,14 @@
         </ul>
 
         <h2>4. Data Storage and Security</h2>
-        <p>Your data is securely stored using <strong>Supabase</strong>, a secure database platform. We implement
-            industry-standard security measures to protect your information.</p>
+        <p>Your privacy is our priority. We implement strong security measures:</p>
+        <ul>
+            <li><strong>End-to-End Encryption:</strong> All chat messages are fully encrypted before leaving your
+                device. This means we cannot read your conversations, even in our database.</li>
+            <li><strong>Secure Storage:</strong> Encrypted data is stored securely using <strong>Supabase</strong>.</li>
+            <li><strong>Access Control:</strong> Only you can access and decrypt your chat history with your secure
+                login.</li>
+        </ul>
 
         <h2>5. Third-Party Services</h2>
         <p>We use the following third-party services:</p>
