--- a/public/privacy.html
+++ b/public/privacy.html
@@ -93,7 +93,8 @@
             within the application settings.</p>
 
         <h2>7. Contact Us</h2>
-        <p>If you have any questions about this Privacy Policy, please contact us.</p>
+        <p>If you have any questions about this Privacy Policy, please contact us at: <a
+                href="mailto:vedai2026@gmail.com">vedai2026@gmail.com</a></p>
     </div>
 </body>
 
