Refine model selector: Use existing input dropdown

--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
               </button>
               <div id="model-dropdown" class="model-dropdown hidden">
                 <div class="model-option selected" data-value="llama-3.3-70b-versatile">
-                  <span class="model-name">Llama 3.3 (Smart)</span>
+                  <span class="model-name">Llama 3.3 (Meta)</span>
                 </div>
-                <div class="model-option" data-value="llama-3.1-8b-instant">
-                  <span class="model-name">Llama 3.1 (Fast)</span>
+                <div class="model-option" data-value="mixtral-8x7b-32768">
+                  <span class="model-name">Mixtral 8x7b (Mistral)</span>
+                </div>
+                <div class="model-option" data-value="gemma2-9b-it">
+                  <span class="model-name">Gemma 2 9B (Google)</span>
                 </div>
               </div>
             </div>
@@ -273,15 +276,6 @@
             <option value="zh">Chinese</option>
             <option value="ja">Japanese</option>
             <option value="pt">Portuguese</option>
-          </select>
-        </div>
-
-        <div class="setting-item-block" style="margin-top:15px;">
-          <label for="model-select" style="display:block; margin-bottom:5px;">AI Model</label>
-          <select id="model-select" class="edit-input">
-            <option value="llama-3.3-70b-versatile">Llama 3.3 70B (Meta) - Default</option>
-            <option value="mixtral-8x7b-32768">Mixtral 8x7b (Mistral) - Fast</option>
-            <option value="gemma2-9b-it">Gemma 2 9B (Google) - Balanced</option>
           </select>
         </div>
 
