--- a/index.html
+++ b/index.html
@@ -243,6 +243,16 @@
         <!-- Preferences -->
         <h3 class="settings-section-title">Preferences</h3>
         <div class="setting-item-block">
+          <label for="model-select" style="display:block; margin-bottom:5px;">AI Model</label>
+          <select id="model-select" class="edit-input">
+            <option value="llama-3.3-70b-versatile">Llama 3.3 70B (Default)</option>
+            <option value="llama-3.1-8b-instant">Llama 3.1 8B (Fast)</option>
+            <option value="mixtral-8x7b-32768">Mixtral 8x7B (Balanced)</option>
+            <option value="gemma2-9b-it">Gemma 2 9B (Google)</option>
+          </select>
+        </div>
+
+        <div class="setting-item-block" style="margin-top: 15px;">
           <label for="language-select" style="display:block; margin-bottom:5px;">Language</label>
           <select id="language-select" class="edit-input">
             <option value="en">English (Default)</option>
