Fix 500 error, add rate limit table, replace decommissioned models with Qwen 3 32B

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                 <span class="model-name">Llama 3.1 8B</span>
                 <span class="model-desc">Fast • Efficient</span>
               </button>
-              <button class="menu-item" data-value="mixtral-8x7b-32768">
-                <span class="model-name">Mixtral 8x7B</span>
-                <span class="model-desc">Balanced • Open</span>
+              <button class="menu-item" data-value="qwen/qwen3-32b">
+                <span class="model-name">Qwen 3 32B</span>
+                <span class="model-desc">Qwen • Balanced</span>
               </button>
               <button class="menu-item" data-value="gemma2-9b-it">
                 <span class="model-name">Gemma 2 9B</span>
@@ -285,7 +285,7 @@
           <select id="model-select" class="edit-input">
             <option value="llama-3.3-70b-versatile">Llama 3.3 70B (Default)</option>
             <option value="llama-3.1-8b-instant">Llama 3.1 8B (Fast)</option>
-            <option value="mixtral-8x7b-32768">Mixtral 8x7B (Balanced)</option>
+            <option value="qwen/qwen3-32b">Qwen 3 32B (Balanced)</option>
             <option value="gemma2-9b-it">Gemma 2 9B (Google)</option>
           </select>
         </div>
