Replace decommissioned Gemma 2 with Llama 4 Preview and update migration logic

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                 <span class="model-name">Qwen 3 32B</span>
                 <span class="model-desc">Qwen • Balanced</span>
               </button>
-              <button class="menu-item" data-value="gemma2-9b-it">
-                <span class="model-name">Gemma 2 9B</span>
-                <span class="model-desc">Google • Concise</span>
+              <button class="menu-item" data-value="meta-llama/llama-4-maverick-17b-128e-instruct">
+                <span class="model-name">Llama 4 17B</span>
+                <span class="model-desc">Meta • Preview</span>
               </button>
             </div>
           </div>
@@ -286,7 +286,7 @@
             <option value="llama-3.3-70b-versatile">Llama 3.3 70B (Default)</option>
             <option value="llama-3.1-8b-instant">Llama 3.1 8B (Fast)</option>
             <option value="qwen/qwen3-32b">Qwen 3 32B (Balanced)</option>
-            <option value="gemma2-9b-it">Gemma 2 9B (Google)</option>
+            <option value="meta-llama/llama-4-maverick-17b-128e-instruct">Llama 4 17B (Preview)</option>
           </select>
         </div>
 
